# sph-c

./: .gitignore  CMakeLists.txt  README.md  main.c  params.ini
.github/workflows/: gh-pages.yaml
examples/: 01_cubic_kernel.c  02_gaussian_kernel.c  03_density_point.c  04_pressure_view.c  05_linear_kernel.c  acceleration.c  cubic_kernel.c  density_point.c  gaussian_kernel.c  particles_influence.c  pressure_gradient.c
include/: ini.h
src/: kernel.c  main.c  particle.c  pressure.c  raylib_extensions.c  raylib_extensions.h  sph.h
src/include/: raylib_extensions.h
web/: README.md  build.sh  index.html  particle_simulator.c  raylib.js
web/include/: math.h
